[project]
name = "unisi"
version = "0.4.7"
description = "Unified System Interface, GUI and Remote API"
authors = [
    {name = "UNISI Tech", email = "g.dernovoy@gmail.com"},
]
dependencies = [
    "aiohttp",
    "jsonpickle",
    "pandas",
    "requests",
    "watchdog",
    "websockets",
    "websocket-client",
    "cymple",
    "kuzu",
    "langchain",
    "langchain-groq",
    "langchain-community",
    "langchain-openai",
    "langchain-google-genai",
    "langchain_mistralai",
    "langchain-xai",
    "word2number"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}

[project.urls]
Homepage = "https://github.com/unisi-tech/unisi"
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

