[project]
name = "unisi"
version = "0.5.9"
description = "Unified System Interface, GUI and Remote API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

authors = [
  {name = "UNISI Tech", email = "g.dernovoy@gmail.com"}
]

dependencies = [
  "aiohttp",
  "jsonpickle",
  "pandas",
  "requests",
  "watchdog",
  "websockets",
  "websocket-client",
  "cymple",
  "kuzu",
  "langchain",
  "langchain-groq",
  "langchain-community",
  "langchain-openai",
  "langchain-google-genai",
  "langchain_mistralai",
  "langchain-xai",
  "word2number"
]

[project.urls]
Homepage = "https://github.com/unisi-tech/unisi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

